Closed
Bug 1344848
Opened 9 years ago
Closed 9 years ago
Don't check for atom leaks unless we're checking for other leaks
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: mccr8, Assigned: mccr8)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
erahm
:
review+
gchang
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
jcristau
:
approval-mozilla-esr52+
|
Details |
It doesn't make sense to check for atom leaks unless we're checking for other leaks, or random things can set it off. For instance, we don't check for leaks in xpcshell. The existing code tries to deal with this by only running if we're in a shutdown GC, which only run in debug builds, but we don't do leak checking for all debug tests, such as xpcshell, so we can hit leaks we don't care about. I think a better thing to check for would be to see if XPCOM_MEM_BLOAT_LOG is set.
Comment 1•9 years ago
|
||
Can we do this in a way that it would only affect *test runs* and not other runs of xpcshell? I'm asking because if we did this blindly, it would have masked bug 1343863 which happened during mach package where we run xpcshell. That would be unfortunate as that turned out to be a real leak in our code that would be possible to be hit by a real user.
| Assignee | ||
Comment 2•9 years ago
|
||
(In reply to :Ehsan Akhgari from comment #1)
> Can we do this in a way that it would only affect *test runs* and not other
> runs of xpcshell?
No. It just happens that in your case the leak was useful information, but it could have just as easily been a false positive, like you were seeing in a number of other tests.
| Assignee | ||
Comment 3•9 years ago
|
||
| Comment hidden (mozreview-request) |
Comment 5•9 years ago
|
||
(In reply to Andrew McCreight [:mccr8] from comment #2)
> (In reply to :Ehsan Akhgari from comment #1)
> > Can we do this in a way that it would only affect *test runs* and not other
> > runs of xpcshell?
>
> No. It just happens that in your case the leak was useful information, but
> it could have just as easily been a false positive, like you were seeing in
> a number of other tests.
OK, fair enough.
Comment 6•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8844145 [details]
Bug 1344848 - Don't check for atom leaks unless we're checking for other leaks.
https://reviewboard.mozilla.org/r/117682/#review119412
::: xpcom/ds/nsAtomTable.cpp:394
(Diff revision 1)
> i.Remove();
> delete atom;
> ++removedCount;
> - } else if (aKind == GCKind::Shutdown) {
> - // We only perform these kind of GCs in leak-checking builds. If
> - // something is anomalous, then we'll report an error here, and crash
> + }
> +#ifdef NS_FREE_PERMANENT_DATA
> + else if (aKind == GCKind::Shutdown && PR_GetEnv("XPCOM_MEM_BLOAT_LOG")) {
Is `XPCOM_MEM_BLOAT_LOG` really the only leak checking env var we have?
| Assignee | ||
Comment 7•9 years ago
|
||
(In reply to Eric Rahm [:erahm] from comment #6)
> Is `XPCOM_MEM_BLOAT_LOG` really the only leak checking env var we have?
There are a hodge-podge of others, which you can see in InitTraceLog(). BLOAT_LOG is the only one we use in testing, I think.
Comment 8•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8844145 [details]
Bug 1344848 - Don't check for atom leaks unless we're checking for other leaks.
https://reviewboard.mozilla.org/r/117682/#review119416
Discussed in IRC, it should be fine to be less spammy in non-`XPCOM_MEM_BLOAT_LOG` runs. As noted in the comment our assertion still runs and does not rely on `nonZeroRefcountAtoms`.
Attachment #8844145 -
Flags: review?(erahm) → review+
Pushed by amccreight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7818d19d769d
Don't check for atom leaks unless we're checking for other leaks. r=erahm
Comment 10•9 years ago
|
||
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f248e1f814d1
Don't check for atom leaks unless we're checking for other leaks. r=erahm
Comment 11•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 12•9 years ago
|
||
| bugherder | ||
Comment 13•9 years ago
|
||
Any chance to get this uplifted? That atom leak check was introduced in FF 54 and uplifted to 53 and 52 (incl. 52 ESR). Since despite our best efforts we still have some leaks in TB, we still have failing tests due to this (we fixed 10 of initially 14 broken tests). So uplift at far as possible would be appreciated. It doesn't look like a risky patch at all.
Flags: needinfo?(erahm)
Flags: needinfo?(continuation)
| Assignee | ||
Comment 14•9 years ago
|
||
Comment on attachment 8844145 [details]
Bug 1344848 - Don't check for atom leaks unless we're checking for other leaks.
Approval Request Comment
[Feature/Bug causing the regression]: bug 1276669
[User impact if declined]: No direct user impact, but this will fix Thunderbird test failures.
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: This just weakens a debug-only check.
[String changes made/needed]: none
Flags: needinfo?(erahm)
Flags: needinfo?(continuation)
Attachment #8844145 -
Flags: approval-mozilla-esr52?
Attachment #8844145 -
Flags: approval-mozilla-beta?
Attachment #8844145 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox53:
--- → affected
status-firefox54:
--- → affected
status-firefox-esr52:
--- → affected
Comment 15•9 years ago
|
||
Comment on attachment 8844145 [details]
Bug 1344848 - Don't check for atom leaks unless we're checking for other leaks.
Take this to help fix Thunderbird test failures. Aurora54+.
Attachment #8844145 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 16•9 years ago
|
||
| bugherder uplift | ||
Comment 17•9 years ago
|
||
Comment on attachment 8844145 [details]
Bug 1344848 - Don't check for atom leaks unless we're checking for other leaks.
disable a debug-only check in some cases, beta53+, esr52+
Attachment #8844145 -
Flags: approval-mozilla-esr52?
Attachment #8844145 -
Flags: approval-mozilla-esr52+
Attachment #8844145 -
Flags: approval-mozilla-beta?
Attachment #8844145 -
Flags: approval-mozilla-beta+
Comment 18•9 years ago
|
||
| bugherder uplift | ||
Comment 19•9 years ago
|
||
| bugherder uplift | ||
Comment 20•9 years ago
|
||
Setting qe-verify- based on Andrew's assessment on manual testing needs (see Comment 14) and the fact that this fix has automated coverage.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•