Bug 1344848 - Don't check for atom leaks unless we're checking for other leaks. r=erahm

MozReview-Commit-ID: H5x8cLv0YGk